--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "intersection-observer": "^0.12.2",
+    "just-debounce-it": "^3.1.1",
+    "wouter": "^2.8.0-alpha.2"
   },
   "scripts": {
     "start": "react-scripts start",
