--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
     "framer-motion": "^6.5.1",
+    "intersection-observer": "^0.12.2",
+    "just-debounce-it": "^3.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "intersection-observer": "^0.12.2",
-    "just-debounce-it": "^3.1.1",
     "wouter": "^2.8.0-alpha.2"
   },
   "scripts": {
